<resources>
    <string name="app_name">Ecommerce</string>
    <string name="kur_e_shop">Zevon E-Shop</string>
    <string name="sign_in">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="let_s_sign_in">Let’s Sign In!!!</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in1">Sign In</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="are_you_haven_t_account">Are you haven’t account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="let_s_create_your_account">Let’s Create Your Account!!!</string>
    <string name="enter_your_email">Enter Your E-mail Address</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="zevon">Zevon .</string>
    <string name="explore_what_you_needs">Explore What You\nNeeds...</string>
    <string name="search_what_you_want">Search what you want.......</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="home_nitems">Home\nItems</string>
    <string name="popular">Popular</string>
    <string name="get_up_to_70_off">Get up to 70% Off</string>
    <string name="see_home_items">See Home Items</string>
    <string name="my_shopping_bag">My Shopping Bag</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="rs_70_000">Rs. 23,550</string>
    <string name="sitron_sofa">Sitron Sofa</string>
    <string name="delete">Delete</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="_510">Rs 10,000</string>
    <string name="buy_now">Buy</string>
    <string name="back">Back</string>
    <string name="_3_7">3.7</string>
    <string name="_120_reviews">120 Reviews</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="description">Description</string>
    <string name="materials">Materials</string>
    <string name="reviews">Reviews</string>
    <string name="dummy_text_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum feugiat varius nunc, in rhoncus orci malesuada at. Mauris nisl. </string>
    <string name="dummy_text_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus lectus, tempor ut elit vitae, ultrices laoreet lorem. In tristique est nec massa posuere ullamcorper. Nunc pulvinar mi nulla, et placerat nunc ornare non. Nunc mauris est, auctor eget odio et, suscipit bibendum lectus. </string>
    <string name="dummy_text_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus lectus, tempor ut elit vitae, ultrices laoreet lorem. In tristique est nec massa posuere ullamcorper. Nunc pulvinar mi nulla, et placerat nunc ornare non. Nunc mauris est, auctor eget odio et, suscipit bibendum lectus. </string>
    <string name="buy">Buy Now</string>
    <string name="hi">Hi,</string>
    <string name="avichal_kaushik">Avichal Kaushik</string>
    <string name="country_and_languages">Country and Languages</string>
    <string name="notifications">Notifications</string>
    <string name="permission">Permissions</string>
    <string name="default_purchase_settings">Default Purchase Settings</string>
    <string name="about">About</string>
    <string name="customer_service">Customer Service</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_orders">Your Orders</string>
    <string name="buy_again">Buy Again</string>
    <string name="account">Account</string>
    <string name="become_seller">Seller</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_account">Your Account</string>
    <string name="your_wishlist">Your Wishlist</string>
    <string name="join_as_seller">Seller Panel</string>
    <string name="hi_avichal_kaushik">Hi, Avichal Kaushik</string>
    <string name="welcome_to_seller_panel">Welcome to Seller Panel</string>
    <string name="name_avichal_kaushik">Name: Avichal Kaushik</string>
    <string name="seller_id_56894681">Seller Id: 56894681</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="rs_30_120">Rs. 30,120</string>
    <string name="total_earning">Total Earning</string>
    <string name="rs_1_53_031">Rs. 1,53,031</string>
    <string name="add_a_new_product">Add a new product</string>
    <string name="modify_existing_product">Modify existing product</string>
    <string name="withdraw_your_earning">Withdraw your earning</string>
    <string name="exit_seller_panel">Exit Seller Panel</string>
    <string name="add_a_new_product1">Add a New Product</string>
    <string name="let_s_create_a_new_one">Let\'s Create a new one</string>
    <string name="discart">Discard</string>
    <string name="upload_images">Upload Product Images</string>
    <string name="product_title">Product Title</string>
    <string name="enter_product_title">Enter Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_price">Product Price</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="create_product">Create Product</string>
    <string name="your_products">Your Products</string>
    <string name="list_of_all_your_uploaded_products">List of all your uploaded products</string>
    <string name="close">Close</string>
    <string name="delete_product">Delete Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="please_select_a_payment_method">Select a Payment Method</string>
    <string name="paypal">Paypal</string>
    <string name="paytm">Paytm</string>
    <string name="gpay">Google Pay</string>
    <string name="bank_account">Bank Account</string>
    <string name="continue1">Continue</string>
    <string name="payment_method">Payment Method</string>
    <string name="email">E-mail</string>
    <string name="create_withdraw_request">Create Withdraw Request</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="enter_account_holder_name">Enter Account Holder Name</string>
    <string name="amount">Amount</string>
    <string name="enter_the_withdraw_amount">Enter the Withdraw Amount</string>
    <string name="enter_account_number">Enter Account Number</string>
</resources>