<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SellerPanelActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seller_top_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avichal_kaushik"
            app:civ_border_color="#ff0000"
            app:civ_border_width="3dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/welcome_to_seller_panel"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="@id/profile_picture" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/name_avichal_kaushik"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/textView41"
            app:layout_constraintTop_toBottomOf="@id/textView41" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/seller_id_56894681"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/textView42"
            app:layout_constraintTop_toBottomOf="@id/textView42" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/seller_earning_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="19sp"
                android:text="@string/your_wallet" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c1c1c1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:text="@string/rs_30_120" />


        </LinearLayout>

        <View
            android:id="@+id/divider9"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="19sp"
                android:text="@string/total_earning" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c1c1c1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:text="@string/rs_1_53_031" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_product"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_log_in_background"
            android:drawableStart="@drawable/ic_add_new_product"
            android:drawableTint="@color/white"
            android:elevation="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/add_a_new_product"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_modify_product"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_sign_in_background"
            android:drawableStart="@drawable/ic_modify_product"
            android:drawableTint="@color/white"
            android:elevation="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/modify_existing_product"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw_balance"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_withdraw_background"
            android:drawableStart="@drawable/ic_withdraw"
            android:drawableTint="@color/white"
            android:elevation="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/withdraw_your_earning"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_exit_seller_background"
            android:drawableStart="@drawable/ic_exit_seller_panel"
            android:drawableTint="@color/white"
            android:elevation="12dp"
            android:fontFamily="@font/quicksand_medium"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/exit_seller_panel"
            android:textColor="@color/white"
            android:textSize="19sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>