<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CartFragment">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_shopping_bag"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/checkout"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/btn_sign_in_background"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:weightSum="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/total"
                android:fontFamily="@font/quicksand_semibold"
                android:textColor="#A7A7A7"
                android:textSize="16sp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/rs_70_000"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="16sp"
                android:textColor="@color/main"
                android:textAlignment="textEnd"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#D0D0D0"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="@id/ll"
        app:layout_constraintEnd_toEndOf="@id/ll"
        app:layout_constraintBottom_toTopOf="@id/ll"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView19" />


</androidx.constraintlayout.widget.ConstraintLayout>